<resources>
    <string name="app_name">Latitude Technology</string>

    <string name="cash_receipt">Cash Receipt</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="receipt_date">Receipt Date</string>
    <string name="dr_a_c_head">Dr A/c Head</string>
    <string name="cr_a_c_head">Cr A/c Head</string>
    <string name="address">Address</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cash">Cash</string>
    <string name="document_reference">Document Reference</string>
    <string name="upload">Upload</string>
    <string name="save">Save</string>


</resources>